[package]
name = "web-codecs"
description = "WASM bindings for Web Codecs"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-rs"
license = "MIT OR Apache-2.0"

version = "0.3.5"
edition = "2021"

categories = ["wasm", "multimedia", "web-programming", "api-bindings"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

thiserror = "1"
js-sys = "0.3.77"
tokio = { version = "1", features = ["sync", "macros"] }
bytes = "1"

derive_more = { version = "1", features = ["from", "display"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
	"VideoDecoder",
	"VideoDecoderInit",
	"VideoDecoderConfig",
	"VideoFrame",
	"VideoColorSpace",
	"VideoColorSpaceInit",
	"EncodedVideoChunk",
	"EncodedVideoChunkInit",
	"EncodedVideoChunkType",
	"HardwareAcceleration",
	"VideoMatrixCoefficients",
	"VideoColorPrimaries",
	"VideoTransferCharacteristics",
	"VideoEncoder",
	"VideoEncoderInit",
	"VideoEncoderConfig",
	"VideoEncoderEncodeOptions",
	"LatencyMode",
	"AlphaOption",
	"EncodedAudioChunk",
	"EncodedAudioChunkInit",
	"EncodedAudioChunkType",
	"AudioData",
	"AudioDecoder",
	"AudioDecoderInit",
	"AudioDecoderConfig",
	"AudioEncoder",
	"AudioEncoderInit",
	"AudioEncoderConfig",
	"AudioSampleFormat",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "web_sys_unstable_apis"]
rustc-args = ["--cfg", "web_sys_unstable_apis"]
