[package]
name = "web-streams"
description = "WASM bindings for the Streams API"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-rs"
license = "MIT OR Apache-2.0"

version = "0.1.1"
edition = "2021"

categories = ["wasm", "web-programming", "api-bindings"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
thiserror = "1.0"

[dependencies.web-sys]
version = "0.3.70"
features = [
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"ReadableStreamReadResult",
	"WritableStream",
	"WritableStreamDefaultWriter",
]
