[package]
name = "web-streams"
description = "WASM bindings for the Streams API"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/web-rs"
license = "MIT OR Apache-2.0"

version = "0.1.4"
edition = "2021"

categories = ["wasm", "web-programming", "api-bindings"]

[dependencies]
thiserror = "2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tokio = { version = "1.45.1", features = ["io-util"], optional = true }
tracing = { version = "0.1", optional = true}


[features]
tokio = ["dep:tokio", "dep:tracing"	]

[dependencies.web-sys]
version = "0.3.77"
features = [
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"ReadableStreamReadResult",
	"WritableStream",
	"WritableStreamDefaultWriter",
]
